frontend/test/typecheck/error/assign-function.fc
void foo() {
    foo = 1;
}
